@@ -58,7 +58,7 @@ extern int get_charset_id_by_name(char *nombre);
 
 extern void set_user_charset(void);
 
-#define MAX_CHARSET_GRAPHIC 170
+#define MAX_CHARSET_GRAPHIC 172
 
 //Tamanyo de cada array para charset en menu, asi podemos saber si por error he metido mas elementos
 //(aunque el compilador no me avisa cuando hay menos elementos, que seria deseable)
