@@ -1553,16 +1553,16 @@ estilos_gui definiciones_estilos_gui[ESTILOS_GUI]={
         ZESARUX_PLUS_COLOUR_FILESELECTOR,0, //Colores fileselector, zona seleccion archivos
 
 		154, //caracter de cerrar ventana
-        150, //caracter de minimizar ventana
-        152, //caracter de maximizar ventana
+        171, //caracter de minimizar ventana
+        172, //caracter de maximizar ventana
         '=', //caracter de restaurar ventana
-        148, //caracter de background ventana
+        149, //caracter de background ventana
         ' ', //caracter de fondo de titulo
 		2+8, //color de aviso
 		colores_franja_speccy_brillo,colores_franja_speccy_oscuro,
         5, //-1, //si texto inverso solo cambia color tinta
         0, //rellenar titulo
-        char_set_dos,
+        char_set_ataritos, //char_set_dos,
         153 //caracter franja cambiado
     },
 
